--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <title>3D for Engineering Visualizations</title>
 </head>
-<body onload="InitProg();" onresize="InitProg();" onmousedown="mouseDownEvent();mouseMoveEvent(event);" onmouseup="mouseUpEvent();" onmousemove="mouseMoveEvent(event);" onkeydown="keyDownEvent(event);" onkeyup="keyUpEvent(event);">
+<body onload="InitProg();" onresize="InitProg();" onmousedown="mouseDownEvent(event);" onmouseup="mouseUpEvent();" onmousemove="mouseMoveEvent(event);" onkeydown="keyDownEvent(event);" onkeyup="keyUpEvent(event);">
 
 <center>
 <div id="canvasFrameId" style="display:inline-block; width:95%; height:95%; overflow:hidden; border:1px solid #888; text-align:center; margin-bottom:4px;">
@@ -322,16 +322,6 @@ function keyUpEvent(e)
 	mainProg(inputState, progState);
 }
 
-var mouseDrag = false;
-function mouseDownEvent()
-{
-   mouseDrag = true;
-}
-function mouseUpEvent()
-{
-   mouseDrag = false;
-}
-
 function mouseMoveEvent(e)
 {
    var rect = canvasId.getBoundingClientRect();
@@ -353,6 +343,19 @@ function mouseMoveEvent(e)
       mainProg(inputState, progState);
    }
 }
+
+var mouseDrag = false;
+function mouseDownEvent(e)
+{
+   mouseDrag = true;
+   
+   mouseMoveEvent(e);
+}
+function mouseUpEvent()
+{
+   mouseDrag = false;
+}
+
 </script>
 
 </body>
